#70947 - Change report "Reported time" - first version

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Reports/Views/Report/ReportViewer/_HistoricalReport.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Reports/Views/Report/ReportViewer/_HistoricalReport.cshtml
@@ -5,7 +5,8 @@
         window.dhHelpdesk.reports.historicalReport = historicalReport({
             dataUrl: '@Url.Action("GetHistoricalData", "Services", new { area = "reports" })',
         });
-
-        window.dhHelpdesk.reports.historicalReport.init();
+        window.dhHelpdesk.reports.reportedTimeReport = reportedTimeReport({
+            dataUrl: '@Url.Action("GetReportedTimeData", "Services", new { area = "reports" })',
+        });
     })
 </script>
