#70947 - Change report "Reported time" - added feature toggle #70946 - Change report "Number of cases" - UI only

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Reports/Views/Report/ReportViewer/_Overview.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Reports/Views/Report/ReportViewer/_Overview.cshtml
@@ -382,9 +382,9 @@
     <div id="generateReportContainer" style="display: none">
     </div>
 
-    <div id="historicalReportContainer" style="display: none;" class="container">
+    <div id="jsReportContainer" style="display: none;" class="container">
         <div class="row" style="display: none; position: relative; height:60vh; width:95vw">
-            @Html.Partial("ReportViewer/_HistoricalReport", Model.ReportViewerData)
+            @Html.Partial("ReportViewer/_JsReport", Model.ReportViewerData)
         </div>
     </div>
 
