--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Reports/Views/Report/ReportViewer/_JsReport.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Reports/Views/Report/ReportViewer/_JsReport.cshtml
@@ -2,11 +2,15 @@
 <script>
     $(function () {
         window.dhHelpdesk.reports = window.dhHelpdesk.reports || {};
+        Chart.plugins.unregister(window.ChartDataLabels); // disable default registration for all charts
         window.dhHelpdesk.reports.historicalReport = historicalReport({
             dataUrl: '@Url.Action("GetHistoricalData", "Services", new { area = "reports" })',
         });
         window.dhHelpdesk.reports.reportedTimeReport = reportedTimeReport({
             dataUrl: '@Url.Action("GetReportedTimeData", "Services", new { area = "reports" })',
+        });
+        window.dhHelpdesk.reports.numberOfCasesReport = numberOfCasesReport({
+            dataUrl: '@Url.Action("GetNumberOfCasesData", "Services", new { area = "reports" })',
         });
     })
 </script>
