--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/home/home.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/home/home.component.html
@@ -11,6 +11,8 @@
       <li translate>Skapa ärenden</li>
       <li translate>Redigera ärenden</li>
       <li translate>Tilldela ärenden</li>
+      <li translate>Kommunicera i ärenden</li>
+      <li translate>Avsluta ärenden</li>
     </ul>
     <p translate>Hoppas du gillar den!</p>
     <p translate>DH Helpdesk utvecklingsteam​</p>
