--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/language/language/language.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/language/language/language.component.html
@@ -3,5 +3,7 @@
 </div>
 
 <mbsc-listview [options]="languageSettings" #languageListView="mobiscroll">
-  <mbsc-listview-item *ngFor="let language of languages" (click)="selectLanguage(language.id)" [(selected)]="language.selected">{{ language.text }}</mbsc-listview-item>
+  <mbsc-listview-item *ngFor="let language of languages" 
+      (click)="setLanguage(language.id)" 
+      [(selected)]="language.selected">{{ language.text }}</mbsc-listview-item>
 </mbsc-listview>
