#66408 - Approve Case - Remove

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CaseType/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CaseType/_Input.cshtml
@@ -50,7 +50,7 @@
                                         </label>
                                     </td>
                                 </tr>
-                                <tr>
+                                <tr style="display: none">
                                     <td>
                                         @Translation.GetCoreTextTranslation("Godkännande")
                                     </td>
