#70755 - Actions tab - who the lognote is sent to; Mail2Tickets support;

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/actions/log-note-action/log-note-action.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/actions/log-note-action/log-note-action.component.html
@@ -10,7 +10,7 @@
               <span class="{{ getActionIcon() }}"></span>
               <span class="logNoteText">{{ data.text }}</span>
           </div>
-          <div class="emailsRow">
+          <div class="emailsRow" *ngIf="!hasM2T">
             <span class="action-icon mbsc-ic mbsc-ic-fa-envelope-o"></span>
             <div class="emails">{{ data.emails.join('; ') }}</div>
           </div>
