#71058 - Incident INC000012590459 new case template the template is not shown in the application directly;

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
@@ -224,8 +224,14 @@
                                                         @Translation.Get("Ärendemall för underärende", Enums.TranslationSource.TextTranslation)
                                                     </td>
                                                     <td>
-                                                        @Html.DropDownListFor(model => model.CaseSolution.SplitToCaseSolution_Id, Model.SplitToCaseSolutions.Select(o => new SelectListItem() { Text = o.Name + (o.CaseSolutionCategory == null ? "" : " - " + o.CaseSolutionCategory.Name), Value = o.Id.ToString() }).ToList(), "")
+                                                        @Html.DropDownListFor(model => model.CaseSolution.SplitToCaseSolution_Id,
+                                                            Model.SplitToCaseSolutions.Select(o => new SelectListItem()
+                                                            {
+                                                                Text = o.Name + (string.IsNullOrEmpty(o.CategoryName) ? "" : " - " + o.CategoryName),
+                                                                Value = o.CaseSolutionId.ToString()
+                                                            }).ToList(), "")
                                                     </td>
+
                                                 </tr>
                                                 <tr>
                                                     <td>
