#71262 - Filter at Contract overview isn't translated

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Contracts/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Contracts/Index.cshtml
@@ -52,7 +52,7 @@
                     {
                         <input type="hidden" id="currentCustomerId" name="CustomerId" value="@Model.Customer.Id" />
                         <div class="row">
-                            @Html.Partial("_ContractsSearchFilter", Model.SearchFilterModel)
+                            @Html.Partial("_ContractsSearchFilter", Model)
                             <div class="pull-right">
                                 @Html.Partial("_ContractsSearchSummary", Model.SearchResults.SearchSummary)
                             </div>
