--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Contracts/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Contracts/_Input.cshtml
@@ -1,10 +1,14 @@
-﻿@using DH.Helpdesk.Web.Infrastructure
-@using DH.Helpdesk.Common.Enums
+﻿@using DH.Helpdesk.Common.Enums
 @using DH.Helpdesk.Web.Models.Contract
-@using System.Web.Optimization
 @model DH.Helpdesk.Web.Models.Contract.ContractViewInputModel
 
-@{ var row = new ContractsSettingRowViewModel(); }
+@{
+    var row = new ContractsSettingRowViewModel();
+
+    //disable mvc validation 
+    HtmlHelper.ClientValidationEnabled = false;
+    HtmlHelper.UnobtrusiveJavaScriptEnabled = false;
+}
 
 <script type="text/javascript">
     window.appParameters = {
@@ -592,114 +596,113 @@
         });
     });
 
-function FieldIsRequired(value) {
-    var ret = false;
-    if (value == 'True') {
-        ret = true;
+    function FieldIsRequired(value) {
+        return value === 'True';
     }
-    return ret;
-}
 
-var validator = $("#target").validate({
-    rules: {
-        "ContractNumber": {
-            required: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.Number && r.Required)")
+    var validator = $("#target").validate({
+        rules: {
+            "ContractNumber": {
+                required: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.Number && r.Required)")
+            },
+            "CaseNumber": {
+                required: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.CaseNumber && r.Required)")
+            },
+            "CategoryId": {
+                required: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.Category && r.Required)")
+            },
+            "SupplierId": {
+                required: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.Supplier && r.Required)")
+            },
+            "DepartmentId": {
+                required: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.Department && r.Required)")
+            },
+            "ResponsibleUserId": {
+                required: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.ResponsibleUser && r.Required)")
+            },
+            "attachedFilesValidCheck": {
+                checkAttachedFiles: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.Filename && r.Required)")
+            },
+            "Other": {
+                required: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.Other && r.Required)")
+            },
+            "ContractStartDate": {
+                required: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.StartDate && r.Required)")
+            },
+            "ContractEndDate": {
+                required: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.EndDate && r.Required)")
+            },
+            "NoticeDate": {
+                required: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.NoticeDate && r.Required)")
+            },
+            "Running": {
+                required: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.Running && r.Required)")
+            },
+            "Finished": {
+                required: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.Finished && r.Required)")
+            },
+            "FollowUpIntervalId": {
+                required: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.FollowUpField && r.Required)")
+            },
+            "FollowUpResponsibleUserId": {
+                required: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.ResponsibleFollowUpField && r.Required)")
+            }
+
         },
-        "CaseNumber": {
-            required: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.CaseNumber && r.Required)")
+        messages: {
+            "ContractNumber": {
+                required: "@Translation.Get("Nummer", Enums.TranslationSource.TextTranslation) @Translation.Get("måste anges")"
+            },
+            "CaseNumber": {
+                required: "@Translation.Get("Ärendenr", Enums.TranslationSource.TextTranslation) @Translation.Get("måste anges")"
+            },
+            "CategoryId": {
+                required: "@Translation.Get("Kategori", Enums.TranslationSource.TextTranslation) @Translation.Get("måste anges")"
+            },
+            "SupplierId": {
+                required: "@Translation.Get("Leverantör", Enums.TranslationSource.TextTranslation) @Translation.Get("måste anges")"
+            },
+            "DepartmentId": {
+                required: "@Translation.Get("Avdelning", Enums.TranslationSource.TextTranslation) @Translation.Get("måste anges")"
+            },
+            "ResponsibleUserId": {
+                required: "@Translation.Get("Ansvarig", Enums.TranslationSource.TextTranslation) @Translation.Get("måste anges")"
+            },
+            "Other": {
+                required: "@Translation.Get("Övrigt", Enums.TranslationSource.TextTranslation) @Translation.Get("måste anges")"
+            },
+            "ContractStartDate": {
+                required: "@Translation.Get("Startdatum", Enums.TranslationSource.TextTranslation) @Translation.Get("måste anges")"
+            },
+            "ContractEndDate": {
+                required: "@Translation.Get("Slutdatum", Enums.TranslationSource.TextTranslation) @Translation.Get("måste anges")"
+            },
+            "NoticeDate": {
+                required: "@Translation.Get("Uppsägningsdatum", Enums.TranslationSource.TextTranslation) @Translation.Get("måste anges")"
+            },
+            "Running": {
+                required: "@Translation.Get("Löpande", Enums.TranslationSource.TextTranslation) @Translation.Get("måste anges")"
+            },
+            "Finished": {
+                required: "@Translation.Get("Avslutad", Enums.TranslationSource.TextTranslation) @Translation.Get("måste anges")"
+            },
+            "FollowUpIntervalId": {
+                required: "@Translation.Get("Uppföljningsintervall", Enums.TranslationSource.TextTranslation) @Translation.Get("måste anges")"
+            },
+            "FollowUpResponsibleUserId": {
+                required: "@Translation.Get("Ansvarig uppföljning", Enums.TranslationSource.TextTranslation) @Translation.Get("måste anges")"
+            }
         },
-        "CategoryId": {
-            required: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.Category && r.Required)")
-        },
-        "SupplierId": {
-            required: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.Supplier && r.Required)")
-        },
-        "DepartmentId": {
-            required: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.Department && r.Required)")
-        },
-        "ResponsibleUserId": {
-            required: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.ResponsibleUser && r.Required)")
-        },
-        "btnAddContractFile": {
-            required: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.Filename && r.Required)")
-        },
-        "Other": {
-            required: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.Other && r.Required)")
-        },
-        "ContractStartDate": {
-            required: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.StartDate && r.Required)")
-        },
-        "ContractEndDate": {
-            required: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.EndDate && r.Required)")
-        },
-        "NoticeDate": {
-            required: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.NoticeDate && r.Required)")
-        },
-        "Running": {
-            required: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.Running && r.Required)")
-        },
-        "Finished": {
-            required: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.Finished && r.Required)")
-        },
-        "FollowUpIntervalId": {
-            required: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.FollowUpField && r.Required)")
-        },
-        "FollowUpResponsibleUserId": {
-            required: FieldIsRequired("@Model.SettingsModel.Any(r => r.ContractField == EnumContractFieldSettings.ResponsibleFollowUpField && r.Required)")
+        submitHandler: function (form) {
+            form.submit();
         }
+    });
 
-    },
-    messages: {
-        "ContractNumber": {
-            required: "@Translation.Get("Nummer", Enums.TranslationSource.TextTranslation) @Translation.Get("måste anges")"
-        },
-        "CaseNumber": {
-            required: "@Translation.Get("Ärendenr", Enums.TranslationSource.TextTranslation) @Translation.Get("måste anges")"
-        },
-        "CategoryId": {
-            required: "@Translation.Get("Kategori", Enums.TranslationSource.TextTranslation) @Translation.Get("måste anges")"
-        },
-        "SupplierId": {
-            required: "@Translation.Get("Leverantör", Enums.TranslationSource.TextTranslation) @Translation.Get("måste anges")"
-        },
-        "DepartmentId": {
-            required: "@Translation.Get("Avdelning", Enums.TranslationSource.TextTranslation) @Translation.Get("måste anges")"
-        },
-        "ResponsibleUserId": {
-            required: "@Translation.Get("Ansvarig", Enums.TranslationSource.TextTranslation) @Translation.Get("måste anges")"
-        },
-        "btnAddContractFile": {
-            required: "@Translation.Get("Bifogad fil", Enums.TranslationSource.TextTranslation) @Translation.Get("måste anges")"
-        },
-        "Other": {
-            required: "@Translation.Get("Övrigt", Enums.TranslationSource.TextTranslation) @Translation.Get("måste anges")"
-        },
-        "ContractStartDate": {
-            required: "@Translation.Get("Startdatum", Enums.TranslationSource.TextTranslation) @Translation.Get("måste anges")"
-        },
-        "ContractEndDate": {
-            required: "@Translation.Get("Slutdatum", Enums.TranslationSource.TextTranslation) @Translation.Get("måste anges")"
-        },
-        "NoticeDate": {
-            required: "@Translation.Get("Uppsägningsdatum", Enums.TranslationSource.TextTranslation) @Translation.Get("måste anges")"
-        },
-        "Running": {
-            required: "@Translation.Get("Löpande", Enums.TranslationSource.TextTranslation) @Translation.Get("måste anges")"
-        },
-        "Finished": {
-            required: "@Translation.Get("Avslutad", Enums.TranslationSource.TextTranslation) @Translation.Get("måste anges")"
-        },
-        "FollowUpIntervalId": {
-            required: "@Translation.Get("Uppföljningsintervall", Enums.TranslationSource.TextTranslation) @Translation.Get("måste anges")"
-        },
-        "FollowUpResponsibleUserId": {
-            required: "@Translation.Get("Ansvarig uppföljning", Enums.TranslationSource.TextTranslation) @Translation.Get("måste anges")"
-        }
-    },
-    submitHandler: function (form) {
-        form.submit();
-    }
-});
-
-
+    $.validator.addMethod("checkAttachedFiles", function (value, element, param) {
+        const hasNewFiles = $('#newFiles').find('tr').length;
+        const hasExistingFiles = $('#oldFiles').find('tr').length;
+        return hasNewFiles || hasExistingFiles;
+    }, function (param, element) {
+        return '@Translation.GetCoreTextTranslation("Bifogad fil") @Translation.GetCoreTextTranslation("måste anges")';
+    });
 </script>
